--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .vscode/settings.json
+
+# Only apps should have lockfiles
+yarn.lock
+package-lock.json
